2006-10-26  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* OGoContentStore/OCSiCalFieldExtractor.m ([OCSiCalFieldExtractor
	-extractQuickFieldsFromEvent:_event]): changed "TENTATIVE" code to
	2 and "CANCELLED" to 0.

2006-10-25  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/UIxAppointmentEditor.js: handle conversion
	of start and end dates to short string dates.

	* UI/MainUI/SOGoUserHomePage.m ([SOGoUserHomePage
	-readFreeBusyAction]): new method that returns an array of numbers
	corresponding to the state in the freebusy of each "quarter of an
	hour" between the "sday" and "eday" date parameters passed in the
	url. This permits to handle the display of the freebusy with Ajax
	mechanisms.
	([SOGoUserHomePage -_freeBusyAsText]): add 2 days to the end date
	since the free busy displays 2 days ahead.

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-contactSearchAction]): new action that returns the uid and the
	username + email of the user whose name contain the value of the
	"search" url parameter.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-fetchFreebusyInfosFrom:_startDateto:_endDate]): added fields
	useful for the computing of the status of the freebusy.

	* UI/Scheduler/UIxFreeBusyUserSelector.m ([UIxFreeBusyUserSelector
	-init]): new component that incarnates a user selector for events
	inspired by the new one found in Thunderbird Lightning.

2006-10-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/generic.js: added code to enable or
	disable anchor visually (following our internal algorithm).

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor -init]):
	added new "url" ivar with its classic accessors.
	([UIxComponentEditor -urlButtonClasses]): new method that returns
	the class strings for the url button on the appointment/task
	editor (depending on the validity of the url).

	* UI/Templates/SchedulerUI/UIxTaskEditor.wox,